syntax = "proto3";
package logistics.v1;
option go_package = "./pb;logistics_pb";

service DeliveryService {
  rpc CreateDelivery(CreateDeliveryRequest) returns (DeliveryResponse);
  rpc UpdateLocation(UpdateLocationRequest) returns (DeliveryResponse);
}

message CreateDeliveryRequest {
  string order_id = 1;
}

message UpdateLocationRequest {
  string order_id = 1;
  double lat = 2;
  double lng = 3;
}

message DeliveryResponse {
  string order_id = 1;
  string status = 2;
}